# mizumi

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Justfile  README.md  pyproject.toml  server.properties  test.sql
app-api/: Cargo.toml  Dockerfile
app-api/migrations/: 001_streaming_jobs.sql
app-api/src/: dagster.rs  error.rs  k8s.rs  main.rs  models.rs  streaming.rs  tests.rs  uc.rs
app-ui/: components.json  next.config.ts  package-lock.json  package.json  proxy.ts
app-ui/app/: globals.css  layout.tsx  page.tsx
app-ui/app/(authed)/: layout.tsx
app-ui/app/(public)/: layout.tsx
app-ui/app/analytics/: page.tsx
app-ui/app/catalog/: layout.tsx  page.tsx
app-ui/app/dashboard/: page.tsx
app-ui/app/editor/: page.tsx
app-ui/app/pipelines/: layout.tsx  page.tsx
app-ui/components/: app-sidebar.tsx  session-selector.tsx  sql-editor.tsx  streaming-test-editor.tsx
app-ui/components/data-grid/: data-grid.tsx
app-ui/hooks/: use-session-context.tsx
app-ui/lib/auth/: core.ts  server.ts
controlplane/: Cargo.toml  Dockerfile
controlplane/src/: tests.rs
docs/: controlplane-lineage-proposal.md  cross-company-journey-dashboard-business-guide.md  cross-company-journey-dashboard-business-guide.vi.md  cross-company-journey-dashboard.md  dashboard-guide.md  demo-transcript.md  demo.md  high-level-design.md  permissions-policy-templates.md  semantic-registry.md  system-architecture.md
infra/caddy/: Caddyfile  ClusterServices.Caddyfile
infra/k8s/app-api/: deployment.yaml  postgres.yaml
infra/k8s/app-ui/: deployment.yaml
infra/k8s/ballista/: cluster.yaml  pv.yaml
infra/k8s/controlplane/: bootstrap-job.yaml  deployment.yaml  postgres.yaml
infra/k8s/dagster/: postgres-alias.yaml
infra/k8s/datafusion/: query-job.yaml
infra/k8s/duckdb/: query-job.yaml  server.yaml
infra/k8s/keycloak/: bootstrap-job.yaml  keycloak.yaml  postgres.yaml
infra/k8s/lancedb/: bootstrap-job.yaml  embed-schema-job.yaml  server.yaml
infra/k8s/ml/: baggage-model-server.yaml  mlflow.yaml  ray-baggage-serve.yaml
infra/k8s/mlflow/: deployment.yaml
infra/k8s/redpanda/: broker.yaml  console.yaml  topic-job.yaml
infra/k8s/rustfs/: s3-proxy.yaml
infra/k8s/shared-postgres/: postgres.yaml
infra/k8s/signoz/: .gitignore  casting.yaml  k8s-infra-values.yaml
infra/k8s/spark/: app.yaml  hello-world-app.yaml  pipeline-job.yaml  seed-job.yaml
infra/k8s/synthetic/: bootstrap-job.yaml  brand-customers-upload-job.yaml  server.yaml
infra/k8s/unitycatalog/: banking-bootstrap-job.yaml  bootstrap-job.yaml  postgres.yaml  server.yaml  ui.yaml
scratches/: daft_job.py  duckdb_detlta.py  duckdb_job.py  init.py  oauth2_login.py  run-init.sh  test.sh
scratches/ch-query/: README.md  main.ts  package.json
scripts/: bootstrap-shared-postgres.sh  deploy-duckdb-server.sh  deploy-ml.sh  deploy.sh  destroy-ml.sh  destroy.sh  duckdb_baggage_damage_preview.py  duckdb_job.py  forward-signoz.sh  forward.sh  init.py  redeploy-controlplane.sh  redeploy-dagster-spark-jobs.sh  redeploy-dagster.sh  redeploy-duckdb-server.sh  redeploy-keycloak.sh  redeploy-rustfs.sh  redeploy-shared-postgres.sh  redeploy-unitycatalog.sh  redistribute_baggage_damage_images.py  restart-streaming-pipelines.sh  run-init.sh  run.txt  setup-metrics-server.sh  signoz.sh  test.sh  test.sql
(+41 files in other folders)
