[project]
name = "mizumi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.13.4",
    "grpcio>=1.48.1",
    "grpcio-status>=1.48.1",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pyspark>=4.1.1",
    "pyspark-connect>=4.1.1",
    "pyyaml>=6.0",
    "zstandard>=0.25.0",
]
