[project]
name = "mizumi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.6",
    "daft[deltalake]>=0.7.10",
    "datafusion>=50.1.0",
    "dagster>=1.13.4",
    "dagster-k8s>=0.29.4",
    "dagster-pipes>=1.13.4",
    "dagster-spark>=0.29.4",
    "kubernetes>=35,<36",
    "grpcio>=1.48.1",
    "grpcio-status>=1.48.1",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pyspark>=4.1.1",
    "pyspark-connect>=4.1.1",
    "pyyaml>=6.0",
    "ray>=2.55.1",
    "zstandard>=0.25.0",
    "duckdb>=1.5.2",
    "deltalake>=1.5.1",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "pillow>=12.2.0",
    "transformers>=5.9.0",
    "lancedb>=0.30.2",
    "openai>=2.38.0",
]
