[package]
name = "controlplane"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.99", features = ["client", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.37", features = ["cmake-build", "tokio"] }
futures = "0.3.32"
